# tikaPOC

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/db/: connection.py  init.sql  populate_db.py
src/services/: chat_agent.py  openalex_topics_processing.py  topic_agent.py  topic_search.py
src/ui/: streamlit_app.py
